--- a/frontend/blood-management-frontend/vercel.json
+++ b/frontend/blood-management-frontend/vercel.json
@@ -1,23 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "env": {
-    "VITE_API_URL": "https://blood-management-api.onrender.com/api",
-    "VITE_APP_NAME": "Blood Management System",
-    "VITE_APP_VERSION": "1.0.0"
-  }
+  ]
 }
