Fix MongoDB timeout issues with better connection settings

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -2,7 +2,7 @@ NODE_ENV=production
 PORT=10000
 DEBUG=
 DEBUG_URL=
-MONGODB_URI=mongodb+srv://quicklink812:K1ss00IEccrxgp2L@cluster0.kxdtmkd.mongodb.net/blood-management?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://quicklink812:K1ss00IEccrxgp2L@cluster0.kxdtmkd.mongodb.net/blood-management?retryWrites=true&w=majority&appName=Cluster0&serverSelectionTimeoutMS=30000&socketTimeoutMS=45000
 JWT_SECRET=blood-management-super-secret-jwt-key-2024-production
 JWT_EXPIRE=7d
 EMAIL_HOST=smtp.gmail.com
