--- a/frontend/blood-management-frontend/.env.production
+++ b/frontend/blood-management-frontend/.env.production
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://blood-management-api.onrender.com/api
 VITE_APP_NAME=Blood Management System
 VITE_APP_VERSION=1.0.0
